Fix z-index of settings page

--- a/app/src/component/style/Settings.scss
+++ b/app/src/component/style/Settings.scss
@@ -4,6 +4,7 @@
 	position: fixed;
 	top: 0;
 	left: 0;
+	z-index: 100;
 	width: 100vw;
 	height: 100vh;
 	background: rgba(0, 0, 0, 0.5);
